Vorwort / Disclaimer eingefügt

--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -35,9 +35,9 @@
 
 % ---------------------------------------------------------------------------------------------------------------------
 % Strukturierung
+\renewcaptionname{ngerman}{\partname}{Kapitel}
 \renewcaptionname{ngerman}{\chaptername}{Artikel}
-\renewcommand*{\chapterformat}{%
-  \mbox{\chapapp{\nobreakspace}\thechapter{} -- }}
+\renewcommand*{\chapterformat}{\mbox{\chapapp{\nobreakspace}\thechapter{} -- }}
 \RedeclareSectionCommand[style=section]{chapter}
 
 
