--- a/DSGVO-Bearbeitung.tex
+++ b/DSGVO-Bearbeitung.tex
@@ -1,5 +1,7 @@
 \input{support/preamble}
 
+\title{DSGVO -- Extended Version}
+
 % VERORDNUNG (EU) 2016/679 DES EUROPÄISCHEN PARLAMENTS UND DES RATES
 % vom 27. April 2016
 % zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten, zum freien Datenverkehr und zur Aufhebung der Richtlinie 95/46/EG (Datenschutz-Grundverordnung)
@@ -12,7 +14,10 @@
 
 \begin{document}
 \frontmatter
+\maketitle
 \tableofcontents
+
+\input{umfeld/vorwort}
 
 \mainmatter
 \part{Allgemeine Bestimmungen}
