--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -52,21 +52,16 @@
 
 \begin{itemize}
 
-  \item Der Verweis auf \href
-   {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:12016M/TXT&qid=1659176223545&from=DE#d1e1808-1-1}
-   {Titel V Kapitel 2 EUV} in \hyperref[itm:02-2a]{Absatz 2a} bezieht sich auf die gemeinsame Außen- und
-   Sicherheitspolitik der EU"=Mitgliedsstaaten.
+  \item Der Verweis auf Titel V Kapitel 2 EUV \cite{euv} in \hyperref[itm:02-2a]{Absatz 2a} bezieht sich auf die
+   gemeinsame Außen- und Sicherheitspolitik der EU"=Mitgliedsstaaten.
 
-  \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32001R0045&qid=1659176445961&from=DE}
-   {Verordnung (EG) Nr. 45/2001} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher Personen bei der
-   Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe und Einrichtungen der Gemeinschaft und
-   den freien Datenverkehr zum Inhalt.
+  \item Die Verordnung (EG) Nr. 45/2001 \cite{vo-ds-fdv} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher
+   Personen bei der Verarbeitung personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und den
+   freien Datenverkehr zum Inhalt.
 
-  \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte
-   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32000L0031&qid=1659176679229&from=DE}
-    {Richtlinie 2000/31/EG} ("`Richtlinie über den elektronischen Geschäftsverkehr"') regelt bestimmte rechtliche
-    Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
-    Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
+  \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte Richtlinie 2000/31/EG \cite{ril-egv} regelt bestimmte
+   rechtliche Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
+   Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
 
    \begin{itemize}
      \item Reine Durchleitung (Artikel 12)
