--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -230,15 +230,10 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \item zur Ziffer 14 -- klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
    aufgeschlüsselte Daten sein?
 
-  \item Die in Ziffer 25 referenzierte 
-   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32015L1535&qid=1659177673712&from=DE}{Richtlinie
-    (EU) 2015/1535} hat  ein Informationsverfahren auf dem Gebiet der technischen Vorschriften und der Vorschriften für
-    die Dienste der Informationsgesellschaft zum Gegenstand. Die referenzierte Begriffsbestimmung
-    für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt elektronisch im Fernabsatz und auf individuellen
-    Abruf eines Empfängers erbrachte Dienstleistung"'. 
-   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32015L1535&qid=1659177673712&from=DE#d1e32-10-1}
-    {Anhang 1} der Richtlinie enthält eine Beispielsammlung nicht unter die Richtlinie fallender Dienste.
+  \item Die in Ziffer 25 referenzierte Richtlinie (EU) 2015/1535 \cite{ril-iv-tv} hat ein Informationsverfahren auf dem
+   Gebiet der technischen Vorschriften und der Vorschriften für die Dienste der Informationsgesellschaft zum
+   Gegenstand. Die referenzierte Begriffsbestimmung für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt
+   elektronisch im Fernabsatz und auf individuellen Abruf eines Empfängers erbrachte Dienstleistung"'. 
+   Anhang 1 der Richtlinie enthält eine Beispielsammlung nicht unter die Richtlinie fallender Dienste.
 
 \end{itemize}
-
-\todo[inline]{Begriffe verlinken}
