--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -52,10 +52,8 @@
 
 \begin{itemize}
 
-  \item Die in \hyperref[itm:21-5]{Absatz 5} referenzierte
-   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32002L0058&qid=1659212895940&from=DE}
-    {Richtlinie 2002/58/EG} regelt die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} und den Schutz der
-    Privatsphäre in der elektronischen Kommunikation.
+  \item Die in \hyperref[itm:21-5]{Absatz 5} referenzierte Richtlinie 2002/58/EG \cite{ril-ds-ek} regelt die
+   Verarbeitung personenbezogener Daten und den Schutz der Privatsphäre in der elektronischen Kommunikation.
 
 \end{itemize}
 
