--- a/DSGVO-ExtendedVersion.tex
+++ b/DSGVO-ExtendedVersion.tex
@@ -1,16 +1,9 @@
 \input{support/preamble}
 
 \title{DSGVO -- Extended Version}
-
-% VERORDNUNG (EU) 2016/679 DES EUROPÄISCHEN PARLAMENTS UND DES RATES
-% vom 27. April 2016
-% zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten, zum freien Datenverkehr und zur Aufhebung der Richtlinie 95/46/EG (Datenschutz-Grundverordnung)
-% (Text von Bedeutung für den EWR)
-% (ABl. L 119 vom 4.5.2016, S. 1)
-% Berichtigt durch:
-% Berichtigung, ABl. L 314 vom 22.11.2016, S.  72 (2016/679)
-% Berichtigung, ABl. L 127 vom 23.5.2018, S.  2 (2016/679)
-% Berichtigung, ABl. L 074 vom 4.3.2021, S.  35 (2016/679)
+\subtitle{Verordnung (EU) 2016/679 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz natürlicher
+ Personen bei der Verarbeitung personenbezogener Daten, zum freien Datenverkehr und zur Aufhebung der Richtlinie
+ 95/46/EG (Datenschutz-Grundverordnung)}
 
 \begin{document}
 \frontmatter
@@ -181,5 +174,9 @@
 \input{artikel/97}
 \input{artikel/98}
 \input{artikel/99}
+
+\backmatter
+\nocite{*}
+\printbibtabular[title=Externe Dokumentverweise]
 
 \end{document}
