--- a/umfeld/vorwort.tex
+++ b/umfeld/vorwort.tex
@@ -3,14 +3,13 @@
 
 Bei diesem Dokument handelt es sich um eine erweiterte Fassung der Verordnung 2016/679 des Europäischen Parlaments und
 des Rates vom 27.04.2016 zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten, zum freien
-Datenverkehr und zur Aufhebung der Richtlinie 95/46/EG (Datenschutz"=Grundverordnung, DSGVO), ursprünglich
-veröffentlicht im ABl. L~119 vom 04.05.2016, S.~1, \todo{bib}in der konsolidierten Fassung inklusive der folgenden
-Berichtigungen:
+Datenverkehr und zur Aufhebung der Richtlinie 95/46/EG (Datenschutz"=Grundverordnung, DSGVO), online verfügbar unter 
+\cite{dsgvo-original}, in der konsolidierten Fassung inklusive der folgenden Berichtigungen:
 
 \begin{itemize}
-  \item Berichtigung, ABl. L~314 vom 22.11.2016, S.~72 (2016/679)\todo{bib}
-  \item Berichtigung, ABl. L~127 vom 23.05.2018, S.~2 (2016/679)\todo{bib}
-  \item Berichtigung, ABl. L~074 vom 04.03.2021, S.~35 (2016/679)\todo{bib}
+  \item Berichtigung \cite{dsgvo-korr-2016}, ABl. L~314 vom 22.11.2016, S.~72 (2016/679)
+  \item Berichtigung \cite{dsgvo-korr-2018}, ABl. L~127 vom 23.05.2018, S.~2 (2016/679)
+  \item Berichtigung \cite{dsgvo-korr-2021}, ABl. L~074 vom 04.03.2021, S.~35 (2016/679)
 \end{itemize}
 
 Im Vergleich zur Originalfassung enthält dieses Dokument die folgenden Erweiterungen:
@@ -27,8 +26,7 @@ Im Vergleich zur Originalfassung enthält dieses Dokument die folgenden Erweiter
 
 \end{itemize}
 
-Das Dokument wird ohne Anspruch auf Vollständigkeit oder Korrektheit zur Verfügung gestellt; die Verwendung dieses
-Dokuments erfolgt auf eigene Gefahr. Bei aller Sorgfalt ist nicht auszuschließen, dass sich Fehler in den Text der
-Verordnung eingeschlichen haben. Der Bearbeiter übernimmt keinerlei Verantwortung für etwaige Folgeschäden, die sich
-aus der Verwendung dieses Dokuments ergeben. Kurz gesagt: Wenn es drauf ankommt, bitte unbedingt und ausschließlich den
-Original"=Verordnungstext verwenden.
+Dieser Text dient lediglich zu Informationszwecken und hat keine Rechtswirkung. Die Bearbeiter übernehmen keine Haftung
+für seinen Inhalt. Verbindliche Fassungen der betreffenden Rechtsakte einschließlich ihrer Präambeln sind nur die im
+Amtsblatt der Europäischen Union veröffentlichten und auf EUR-Lex verfügbaren Texte. Diese amtlichen Texte sind über
+die Links in diesem Dokument bzw. dessen Literaturverzeichnis unmittelbar zugänglich.
